--- a/app-android/src/main/res/values/gtfs_rts_values_gen.xml
+++ b/app-android/src/main/res/values/gtfs_rts_values_gen.xml
@@ -3,7 +3,7 @@
     <string name="gtfs_rts_source_label">bct.tmix.se</string>
     <string name="gtfs_rts_agency_id">0</string>
     <integer name="gtfs_rts_agency_type">3</integer>
-    <string name="gtfs_rts_timezone">America/Dawson_Creek</string>
+    <string name="gtfs_rts_timezone">America/Vancouver</string>
     <string name="gtfs_rts_color">34B233</string>
     <string name="gtfs_rts_route_id_cleanup_regex">\\-[A-Z]+$</string>
 </resources>
